# meta-thermo

./: MPTcalculation.py  README.md  metathermo.py  setup.cfg
scripts/: MPTcalculation.py  jobs.py
test_data/: AA_output.txt  MPT_output.txt  fastp.html  fastp.json  gzip_test.fastq
test_data/out_fastp/: gip_test.qf.fq
test_data/out_prodigal/: test.faa
test_data/out_seqkit/: test.fna
test_data/qf_fq/: gip_test.html  gip_test.json
test_data/qf_report/: gip_test.html  gip_test.json
