[metadata]
name = metathermo
version = attr: scripts.__version__
url = https://xxxxxxxxxxxxxxxxxxxxx
author = Masaomi Kurokawa
author_email = mkurokawa@nig.ac.jp
license_file = LICENSE
description = Predict sampling temperature from metagenomic sequences
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
package_dir=
    =scripts
packages = find:
install_requires = 
    numpy >= 1.19.0

[options.packages.find]
where=src